--- a/main.css
+++ b/main.css
@@ -53,6 +53,10 @@ html{
     margin:100px 0 0 0;
     position: relative;
 }
+
+.skills-section h4{
+    color: white;
+}
 .container{
     margin-top:100px;
 }
