projects section completed

--- a/css/app.css
+++ b/css/app.css
@@ -1,24 +1,1 @@
-
-a{
-  background: #007bff;
-  padding: 20px;
-  text-decoration: none;
-  color: white;
-  border-radius: 2px;
-  box-shadow: 10px 10px 10px grey;
-  text-align: center;
-  font-weight: 400;
-}
-
-.colme{
-  margin-bottom: 55px;
-}
-a:hover{
-  text-decoration: none;
-  color: white;
-  background:#f44336;
-}
-
-.container{
-  margin-top: 100px;
-}
+/* No CSS *//*# sourceMappingURL=app.css.map */
