--- a/main.css
+++ b/main.css
@@ -1,13 +1,14 @@
 html,body{
     margin:0;
     padding:0;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
 }
 
 html{
     font-family: Helvetica, sans-serif;
     font-weight: bolder;
+    scroll-behavior: smooth;
 }
 
 .navBar{
@@ -49,6 +50,8 @@ html{
 #toggleMenu{
     display: none;
 }
+
+
 .skills-section{
     margin:100px 0 0 0;
     position: relative;
@@ -56,10 +59,14 @@ html{
 
 .skills-section h4{
     color: white;
+    position: relative;
+    z-index: 100;
 }
 .container{
-    margin-top:100px;
+    margin-top:50px;
+    margin-bottom:50px;
 }
+
 
 .designation-background{
     background: rgb(64, 64, 247);
@@ -68,7 +75,7 @@ html{
     position: absolute;
     top: -20px;
     left: -30px;
-    z-index: -1;
+  
 }
 .line{
     height: 4px;
@@ -92,14 +99,49 @@ html{
     font-weight: bolder;
     border-radius: 10px;
     -webkit-box-shadow: -1px 0px 34px 0px rgba(0,0,0,0.12);
--moz-box-shadow: -1px 0px 34px 0px rgba(0,0,0,0.12);
-box-shadow: -1px 0px 34px 0px rgba(0,0,0,0.12);
+    -moz-box-shadow: -1px 0px 34px 0px rgba(0,0,0,0.12);
+    box-shadow: -1px 0px 34px 0px rgba(0,0,0,0.12);
     margin: 20px 10px ;
     text-align:center;
-    
     padding: 30px;
 
 }
+
+
+#projects-section{
+    background: rgb(64, 64, 247);
+    clip-path: polygon(100% 0, 100% 49%, 86% 100%, 0 100%, 0 0);
+
+}
+
+#projects-section img{
+    max-height: 100%;
+    object-fit: contain;
+}
+
+#projects-section h2 {
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    padding-top:50px;
+    padding-bottom: 3em;
+}
+
+
+.projectcard{
+    background-color: #EAEAEB;
+    height: 230px;
+    width: 230px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, .2);
+    /* position: relative; */
+    margin: 0 auto;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    
+
+}
+
+
 
 @media only screen and (max-width:500px){
     .navBar label{
@@ -122,4 +164,14 @@ box-shadow: -1px 0px 34px 0px rgba(0,0,0,0.12);
         display: block; 
         
     }
+    
+}
+
+@media only screen and (max-width:1000px){
+    #projects-section{
+        background: rgb(64, 64, 247);
+        /* clip-path: none; */
+        clip-path: polygon(100% 0, 100% 80%, 84% 100%, 0 100%, 0 0);
+
+    }   
 }
