--- a/projects/music/style.css
+++ b/projects/music/style.css
@@ -1,76 +1,85 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: 'Poppins', sans-serif;
-	box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: inherit;
 }
-html,body{
-	box-sizing: border-box;
+
+html,
+body {
+    box-sizing: border-box;
 }
 
 
-.container{
-	height: 100vh;
-	width:100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;	
-	align-items: center;
-}
-h1{
-	margin:100px;
-}
-.audios{
-	display: flex;
-	width:100vw;
-	
+.container {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.audios > div {
-	height: 200px;
-	width:200px;
-	flex:1;
-	cursor: pointer;
-	
+h1 {
+    margin: 100px;
 }
 
-.pad1{
-	background: #eff167;
-}
-.pad2{
-	background: #59ec7e;
-}
-.pad3{
-	background: #eaeaea;;
-}
-.pad4{
-	background: #848ae9;
+.audios {
+    display: flex;
+    width: 100vw;
+
 }
 
-.visual > div {
-	height: 50px;
-	border-radius: 50%;
-	width: 50px;
-	display: none;
-	position: absolute;
-	z-index: -1;
+.audios>div {
+    height: 200px;
+    width: 200px;
+    flex: 1;
+    cursor: pointer;
+
 }
 
-@keyframes jump{
- 
-	0%{
-		bottom:0;
-		left: 0;
-	}
-	30%{
-		bottom:80%;
-		left: 50%;
+.pad1 {
+    background: #eff167;
+}
 
-	}
+.pad2 {
+    background: #59ec7e;
+}
 
-	100%{
-		bottom:0;
-		left:100%;
-	}
+.pad3 {
+    background: #eaeaea;
+    ;
+}
+
+.pad4 {
+    background: #848ae9;
+}
+
+.visual>div {
+    height: 50px;
+    border-radius: 50%;
+    width: 50px;
+    display: none;
+    position: absolute;
+    z-index: -1;
+}
+
+@keyframes jump {
+
+    0% {
+        bottom: 0;
+        left: 0;
+    }
+
+    30% {
+        bottom: 80%;
+        left: 50%;
+
+    }
+
+    100% {
+        bottom: 0;
+        left: 90%;
+    }
 
 }
